Fix Spacing and Image Links

--- a/css/main.css
+++ b/css/main.css
@@ -7,3 +7,7 @@ h1, h2, h3{
     color: white;
     font-family: 'Kurale', serif;
 }
+.caption{
+    color: white;
+    text-align: center;
+}
