--- a/css/species.css
+++ b/css/species.css
@@ -16,7 +16,7 @@ h1{
     width: 58%;
     background-color: #1abc9c;
     margin-left: 2%;
-    padding-top: 40%;
+    padding-top: 50%;
     position: relative;
 }
 
@@ -26,22 +26,20 @@ h1{
     left: 5%;
     bottom: 5%;
     right: 5%;
-    overflow:scroll;
+    overflow:auto;
 }
 
 .slideshow{
     float: left;
-    position: relative;
-    left: 6%;
 }
 
 .slider {
-    width: 25%;
-    margin: 100px auto;
+    width: 40%;
+    margin: 2% auto;
 }
 
 .slick-slide {
-    margin: 0px 20px;
+    margin: 0px 10px;
     outline: none;
 }
 
